--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -9,8 +9,27 @@ events {
 
 http {
   server {
+      listen 80;
+      listen [::]:80;
+  
+      server_name librephotos-test.crutchfield.io;
+      server_tokens off;
+  
+      location /.well-known/acme-challenge/ {
+          root /var/www/certbot;
+      }
+  
+      location / {
+          return 301 https://librephotos-test.crutchfield.io$request_uri;
+      }
+  }
+
+  server {
     listen 443 ssl;
     
+    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+
     location / {
       # React routes are entirely on the App side in the web browser
       # Always proxy to root with the same page request when nginx 404s
