--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - ${scanDirectory}:/data
       - ${data}/protected_media:/protected_media
-      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf/:ro
       - ./certbot/www:/var/www/certbot/:ro
     ports:
       - 80:80
