update mounts, hardcode domain for now

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -27,8 +27,8 @@ http {
   server {
     listen 443 ssl;
     
-    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/librephotos-test.crutchfield.io/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/librephotos-test.crutchfield.io/privkey.pem;
 
     location / {
       # React routes are entirely on the App side in the web browser
