--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,19 +17,13 @@ services:
       - ${scanDirectory}:/data
       - ${data}/protected_media:/protected_media
       - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf/:ro
-      - ./certbot/www:/var/www/certbot/:ro
+      - /etc/letsencrypt/live/:/etc/nginx/ssl/live/
     ports:
       - 80:80
       - 443:443
     depends_on:
       - backend
       - frontend
-
-  certbot:
-    image: certbot/certbot:latest
-    container_name: certbot
-    volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
 
   db:
     image: postgres:13
