--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -12,7 +12,7 @@ http {
       listen 80;
       listen [::]:80;
   
-      server_name librephotos-test.crutchfield.io;
+      server_name DOMAIN_REPLACE_ME;
       server_tokens off;
   
       location /.well-known/acme-challenge/ {
@@ -20,15 +20,15 @@ http {
       }
   
       location / {
-          return 301 https://librephotos-test.crutchfield.io$request_uri;
+          return 301 https://DOMAIN_REPLACE_ME$request_uri;
       }
   }
 
   server {
     listen 443 ssl;
     
-    ssl_certificate /etc/nginx/ssl/live/librephotos-test.crutchfield.io/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/librephotos-test.crutchfield.io/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/DOMAIN_REPLACE_ME/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/DOMAIN_REPLACE_ME/privkey.pem;
 
     location / {
       # React routes are entirely on the App side in the web browser
